<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".GameScreenActivity">

    <Button
        android:id="@+id/endTurn_Button"
        android:layout_width="259dp"
        android:layout_height="58dp"
        android:layout_marginTop="1dp"
        android:text="@string/endTurn_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollDie_Button" />

    <Button
        android:id="@+id/rollDie_Button"
        android:layout_width="259dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:text="@string/rollDie_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runningPointsTotal_Label" />

    <TextView
        android:id="@+id/runningPointsTotal_Label"
        android:layout_width="252dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="#CC000000"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/runningPointsTotal_Label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsDescription_Label" />

    <TextView
        android:id="@+id/player2_Label"
        android:layout_width="138dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="#CC000000"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/player2_Label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2Score_Label"
        android:layout_width="138dp"
        android:layout_height="38dp"
        android:background="#CC000000"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/plaer2Score_Label"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2UsernameTextEntry" />

    <TextView
        android:id="@+id/player1Score_Label"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:background="#CC000000"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/player1Score_Label"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2UsernameTextEntry" />

    <EditText
        android:id="@+id/player1UsernameTextEntry"
        android:layout_width="130dp"
        android:layout_height="37dp"
        android:background="#CC000000"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/player1_Label"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/username_placeholder_text"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1_Label" />

    <TextView
        android:id="@+id/player1_Label"
        android:layout_width="130dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="#CC000000"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/player1_Label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player2UsernameTextEntry"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:background="#CC000000"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/player1_Label"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/username_placeholder_text"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2_Label" />

    <ImageView
        android:id="@+id/dieRollResult_Label2"
        android:layout_width="109dp"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/dieRoll_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dieRollResult_Label"
        app:layout_constraintTop_toBottomOf="@+id/currentPlayer_Label"
        app:srcCompat="@drawable/die8side1" />

    <ImageView
        android:id="@+id/dieRollResult_Label"
        android:layout_width="109dp"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/dieRoll_desc"
        app:layout_constraintEnd_toStartOf="@+id/dieRollResult_Label2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPlayer_Label"
        app:srcCompat="@drawable/die8side1" />

    <TextView
        android:id="@+id/currentPlayer_Label"
        android:layout_width="252dp"
        android:layout_height="64dp"
        android:layout_marginTop="50dp"
        android:background="#CC000000"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/playerTurn_Label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2Score_Label" />

    <TextView
        android:id="@+id/pointsDescription_Label"
        android:layout_width="252dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:background="#CC000000"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/pointsDesc_Label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dieRollResult_Label" />

</androidx.constraintlayout.widget.ConstraintLayout>